# noogle-search-tv

./: Cargo.toml  README.md  flake.nix  package.nix
src/: cache.rs  format.rs  main.rs
src/commands/: mod.rs  open_noogle.rs  open_source.rs  preview.rs  print.rs  search.rs  util.rs
