[package]
name = "noogle-search"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.56", features = ["derive"] }
dirs = "6.0.0"
libc = "0.2.180"
owo-colors = "4.2.3"
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "json", "native-tls", "http2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
